--- a/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
@@ -4,3 +4,6 @@ postgres_version: 9.3
 postgres_packages:
   - postgresql
   - postgresql-contrib
+
+proftpd_pkg: proftpd-1.3.4a
+proftpd_install_dir: /opt/proftpd
