--- a/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
@@ -7,3 +7,8 @@ postgres_packages:
 
 proftpd_pkg: proftpd-1.3.4a
 proftpd_install_dir: /opt/proftpd
+proftpd_packages:
+  - postgresql-server-dev-{{ postgres_version }}
+  - libpq-dev 
+  - libssl-dev
+  - stow
