--- a/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
@@ -8,6 +8,7 @@ postgres_packages:
 proftpd_pkg: proftpd-1.3.4a
 proftpd_install_dir: /opt/proftpd
 proftpd_packages:
+  - build-essential
   - postgresql-server-dev-{{ postgres_version }}
   - libpq-dev 
   - libssl-dev
