--- a/adapt_cluster_provisioning/roles/slurm/tasks/drmaa.yml
+++ b/adapt_cluster_provisioning/roles/slurm/tasks/drmaa.yml
@@ -1,6 +1,11 @@
 ---
 # Slurm-drmaa, only on master
 
+- name: Install drmaa packages
+  apt: pkg={{ item }} state=installed
+  with_flattened:
+  - slurm_drmaa_packages
+
 - name: Get slurm-drmaa source
   get_url: url={{ slurm_drmaa_url }} dest=/tmp/slurm-drmaa.tar.gz
 - name: Unpack slurm-drmaa source
