--- a/adapt_cluster_provisioning/roles/slurm/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/slurm/vars/main.yml
@@ -5,5 +5,8 @@ slurm_packages:
   - slurm-llnl 
   - libslurm-dev 
 
+slurm_drmaa_packages:
+  - build-essential
+
 slurm_drmaa_url: http://apps.man.poznan.pl/trac/slurm-drmaa/downloads/9
 slurm_drmaa_pkg: slurm-drmaa-1.0.7
