--- a/adapt_cluster_provisioning/roles/nginx/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/nginx/tasks/main.yml
@@ -1,10 +1,16 @@
 ---
+# Nginx installation
 
-# Nginx
+- name: Setup galaxy user
+  user: name=galaxy comment="Galaxy user" uid=1001 state=present shell=/bin/bash
+- name: Create galaxy mount point for nginx and other mount points
+  file: path={{ item }} state=directory
+  with_items: mount_paths
+  
 - name: Install nginx dependencies
   apt: pkg={{ item }} state=installed
-  with_flattened:
-    - ${nginx_packages}
+  with_items: nginx_packages
+
 - name: Getting nginx source
   command: wget {{ nginx_location }}/{{ nginx_package }}.tar.gz chdir=/tmp
 - name: Untarring source
