--- a/adapt_cluster_provisioning/roles/nginx/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/nginx/vars/main.yml
@@ -1,8 +1,12 @@
 ---
 
 nginx_packages:
+  - git-core
+  - build-essential
+  - libssl-dev
   - libpcre3
   - libpcre3-dev
+  - stow
 
 # Source pkg names for nginx
 nginx_location: http://nginx.org/download
