--- a/adapt_cluster_provisioning/roles/galaxy_initialization/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy_initialization/vars/main.yml
@@ -1,3 +1,10 @@
 ---
 
 galaxy_repo: https://bitbucket.org/glormph/adapt
+
+galaxy_packages:
+  - unzip
+  - mercurial
+
+python_libraries:
+  - psycopg2 # for setting postgres privileges
