Some ansible cosmetics

--- a/adapt_cluster_provisioning/roles/galaxy_initialization/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy_initialization/tasks/main.yml
@@ -3,7 +3,7 @@
 # Install galaxy
 - name: Install galaxy dependencies
   apt: pkg={{ item }} state=installed
-  with_flattened: galaxy_packages
+  with_items: galaxy_packages
 
 - name: Checkout galaxy from bitbucket
   hg: repo={{ galaxy_repo }} dest={{ galaxy_path }}
