--- a/adapt_cluster_provisioning/roles/galaxy_initialization/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy_initialization/vars/main.yml
@@ -5,6 +5,8 @@ galaxy_repo: https://bitbucket.org/glormph/adapt
 galaxy_packages:
   - unzip
   - mercurial
+  - python-pip
+  - libpq-dev # for ansible postgres stuff
 
 python_libraries:
   - psycopg2 # for setting postgres privileges
