--- a/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_proftpd/vars/main.yml
@@ -4,6 +4,7 @@ postgres_version: 9.3
 postgres_packages:
   - postgresql
   - postgresql-contrib
+  - python-pip
 postgres_libraries:
   - psycopg2
 
