--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -2,6 +2,10 @@
 # Tasks for installing packages needed on worker and master
 # tool dependencies etc. etc.
 
+- name: Install core packages
+  apt: name={{ item }} state=installed
+  with_items: core_packages
+
 - name: Set locale
   command: /usr/sbin/update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
 
@@ -12,8 +16,19 @@
   file: path={{ item }} state=directory
   with_flattened: mount_paths
 
+- name: Stop nginx before creating mount point
+  service: name=nginx state=stopped
+  when: "'master' in group_names"
+
 - name: Mount data, tool, galaxy volumes
   mount: src={{ item.0 }} name={{ item.1 }} fstype=nfs state=mounted 
   with_together:
   - mount_shares
   - mount_paths
+
+- name: Create new bona fide upload_store
+  file: path={{ galaxy_path }}/upload_store state=directory
+  when: "'master' in group_names"
+- name: Start nginx again
+  service: name=nginx state=started
+  when: "'master' in group_names"
