--- a/adapt_cluster_provisioning/roles/core/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/core/tasks/main.yml
@@ -27,7 +27,7 @@
   - mount_paths
 
 - name: Create new bona fide upload_store
-  file: path={{ galaxy_path }}/upload_store state=directory
+  file: path={{ data_path }}/upload_store state=directory
   when: "'master' in group_names"
 - name: Start nginx again
   service: name=nginx state=started
