Added openMS to tools and moved tool_build_packages to one variable

--- a/adapt_cluster_provisioning/roles/tool_dependencies/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/tool_dependencies/tasks/main.yml
@@ -28,3 +28,6 @@
   apt: pkg={{ item }} state=installed
   with_items: msgfplus_deps
 
+- name: Install OpenMS dependenceis
+  apt: pkg={{ item }} state=installed
+  with_items: openms_deps
