--- a/adapt_cluster_provisioning/roles/tools/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/tools/vars/main.yml
@@ -21,7 +21,7 @@ percolator_path: "{{ percolator_pkg }}/{{ percolator_ver }}"
 perconvert_path: "{{ perconvert_pkg }}/{{ percolator_ver }}"
 pout2mzid_pkg: pout2mzid
 pout2mzid_ver: v0.3.0
-pout2mzid_git: git://github.com/percolator/pout2mzid
+pout2mzid_repo: git://github.com/percolator/pout2mzid
 openms_pkg: openms
 openms_ver: 1.11
 openms_git_ver: 6a515dd1e23882ec60578a289920bf46ca4f525d
