Pout2mzid version and galaxy role stops galaxy service first

--- a/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 
-# Install galaxy
+- name: Stop galaxy # does not work...
+  service: name=galaxy state=stopped  
+
 - name: Install galaxy dependencies
   apt: pkg={{ item }} state=installed
   with_items: galaxy_packages
