--- a/adapt_cluster_provisioning/roles/ntp/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/ntp/tasks/main.yml
@@ -29,3 +29,6 @@
               regexp='^server {{ master_ip }}'
               line='server {{ master_ip }}'
   when: "'master' not in group_names"
+
+- name: Restart ntp server
+  service: name=ntp state=restarted
