Better regexping when removing lines from ntp config

--- a/adapt_cluster_provisioning/roles/ntp/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/ntp/tasks/main.yml
@@ -20,7 +20,13 @@
 
 - name: Remove internet ntp server listening from worker
   lineinfile: dest=/etc/ntp.conf
-              regexp='^server 0.ubuntu'
+              regexp='^server \d.ubuntu'
+              state=absent
+  when: "'master' not in group_names"
+
+- name: Remove internet ntp server listening from worker
+  lineinfile: dest=/etc/ntp.conf
+              regexp='^server ntp.ubuntu.com'
               state=absent
   when: "'master' not in group_names"
 
