--- a/adapt_cluster_provisioning/roles/postgres_proftpd/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_proftpd/tasks/main.yml
@@ -18,6 +18,9 @@
 - name: Configure PostgreSQL
   lineinfile: dest=/etc/bash.bashrc line="export PATH=/usr/lib/postgresql/{{ postgres_version }}/bin:$PATH" state=present regexp="export PATH=/usr/lib/postgresql/{{ postgres_version }}/bin"
 
+- name: Make sure postgres is running
+  service: name=postgresql state=started
+
 - name: Create postgres galaxy user
   postgresql_user: name=galaxy 
                    password={{ galaxy_pg_pass }} 
@@ -36,34 +39,34 @@
                    login_user=postgres
   sudo_user: postgres
 
-- name: Install proftpd packages
-  apt: pkg={{ item }} state=installed
-  with_items: proftpd_packages
-
-- name: Getting proFTPd
-  get_url: url=ftp://ftp.tpnet.pl/pub/linux/proftpd/distrib/source/{{ proftpd_pkg }}.tar.gz dest=/tmp/{{ proftpd_pkg }}.tar.gz
-- name: Untarring proFTPd source
-  command: tar xvfz {{ proftpd_pkg }}.tar.gz chdir=/tmp
-- name: Configuring makefile for proFTPd
-  command: chdir=/tmp/{{ proftpd_pkg }} ./configure --prefix={{ proftpd_install_dir }} --disable-auth-file --disable-ncurses --disable-ident --disable-shadow --enable-openssl --with-modules=mod_sql:mod_sql_postgres:mod_sql_passwd --with-libraries=/usr/lib/postgresql/{{ postgres_version }}/lib
-  environment:
-    CFLAGS: -I/usr/include/postgresql
-- name: Making proFTPd
-  command: make chdir=/tmp/{{ proftpd_pkg }}
-- name: Install proFTPd
-  command: make install chdir=/tmp/{{ proftpd_pkg }}
-- name: Cleaning up post making
-  command: make clean chdir=/tmp/{{ proftpd_pkg }}
-
-# proFTPd config
-- name: Uploading proFTPd init file template
-  template: src=proftpd.initd.j2 dest=/etc/init.d/proftpd mode=755
-- name: Uploading welcome message
-  copy: src=welcome_msg.txt dest=/opt/proftpd/etc/welcome_msg.txt
-- name: Stowing proFTPd
-  command: stow proftpd chdir=/opt
-- name: Add proFTPd to default run levels
-  service: name=proftpd enabled=yes
-- name: Uploading proFTPd config file
-  template: src=proftpd.conf.j2 dest=/opt/proftpd/etc/proftpd.conf
-
+#- name: Install proftpd packages
+#  apt: pkg={{ item }} state=installed
+#  with_items: proftpd_packages
+#
+#- name: Getting proFTPd
+#  get_url: url=ftp://ftp.tpnet.pl/pub/linux/proftpd/distrib/source/{{ proftpd_pkg }}.tar.gz dest=/tmp/{{ proftpd_pkg }}.tar.gz
+#- name: Untarring proFTPd source
+#  command: tar xvfz {{ proftpd_pkg }}.tar.gz chdir=/tmp
+#- name: Configuring makefile for proFTPd
+#  command: chdir=/tmp/{{ proftpd_pkg }} ./configure --prefix={{ proftpd_install_dir }} --disable-auth-file --disable-ncurses --disable-ident --disable-shadow --enable-openssl --with-modules=mod_sql:mod_sql_postgres:mod_sql_passwd --with-libraries=/usr/lib/postgresql/{{ postgres_version }}/lib
+#  environment:
+#    CFLAGS: -I/usr/include/postgresql
+#- name: Making proFTPd
+#  command: make chdir=/tmp/{{ proftpd_pkg }}
+#- name: Install proFTPd
+#  command: make install chdir=/tmp/{{ proftpd_pkg }}
+#- name: Cleaning up post making
+#  command: make clean chdir=/tmp/{{ proftpd_pkg }}
+#
+## proFTPd config
+#- name: Uploading proFTPd init file template
+#  template: src=proftpd.initd.j2 dest=/etc/init.d/proftpd mode=755
+#- name: Uploading welcome message
+#  copy: src=welcome_msg.txt dest=/opt/proftpd/etc/welcome_msg.txt
+#- name: Stowing proFTPd
+#  command: stow proftpd chdir=/opt
+#- name: Add proFTPd to default run levels
+#  service: name=proftpd enabled=yes
+#- name: Uploading proFTPd config file
+#  template: src=proftpd.conf.j2 dest=/opt/proftpd/etc/proftpd.conf
+#
