User data admins should be a list. Also corrected a title

--- a/adapt_cluster_provisioning/roles/postgres_proftpd/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/postgres_proftpd/tasks/main.yml
@@ -5,7 +5,7 @@
   apt: pkg={{ item }} state=installed
   with_items: postgres_packages
 
-- name: Install postgres libraries for ansible from mirror
+- name: Install postgres libraries for python from mirror
   pip: name={{ item }} state=present extra_args="--index-url=http://{{master_ip}}/pypimirror/simple"
        executable=pip
   with_items: postgres_libraries
