Cron script for cleaning up datasets

--- a/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
+++ b/adapt_cluster_provisioning/roles/galaxy/tasks/main.yml
@@ -23,6 +23,18 @@
               regexp="^drmaa = 0.4b3"
               dest={{ galaxy_path }}/eggs.ini
 
+- name: Install crontab to keep datasets clean
+  cron: name="cleanup datasets"
+        user=galaxy
+        hour=7
+        job={{ galaxy_path }}/scripts/cleanup_datasets/{{ item }}
+  with_items:
+  - delete_userless_histories.sh
+  - purge_histories.sh
+  - purge_libraries.sh
+  - purge_folders.sh
+  - purge_datasets.sh
+
 # Conf.xml files
 - name: Upload tool_conf.xml file
   copy: src=tool_conf.xml 
