--- a/adapt_cluster_provisioning/roles/tools/vars/main.yml
+++ b/adapt_cluster_provisioning/roles/tools/vars/main.yml
@@ -24,8 +24,8 @@ pout2mzid_ver: 0.3.1
 pout2mzid_commit: d3a8740ad5a9ed61b4efa78a244f1531216c9860
 pout2mzid_repo: git://github.com/percolator/pout2mzid
 openms_pkg: openms
-openms_ver: 1.11
-openms_git_ver: 6a515dd1e23882ec60578a289920bf46ca4f525d
+openms_ver: 1.11_night
+openms_git_ver: 0d33fa16faf272f77e8ff1f0e9e230dcc5b9a149 
 pwiz_url: http://data.mallicklab.com/download.php
 pwiz_pkg: proteowizard
 pwiz_ver: 3.0.6239
